# SpectralMachine

./: README.md  SpectraLearnPredict.py
Experimental/: SpectraLearnPredict-exp.py  SpectraLearnPredict.py  setup.py
ML_Raman/: MapMaker.py  SpectraLearnPredict.py
ML_Spectra/: SpectraLearnPredict.py
Obsolete/: SVM_learning_multidim.py  SVM_learning_spectra_Labspec-full.py
Other/: SVM_learning_spectra_Labspec-full.py
PCA_Maps/: PCA_spectra_Labspec-full.py
SVM_Maps/: MapMakerSVM.py  SVM_learning_spectra.py  SVM_learning_spectra_Labspec-full.py  SVM_learning_spectra_selected.py  SVM_map_maker.py  SpectraExtractor.py  SpectraExtractorSVM.py  SpectraLearnPredictSVM.py
SingleFile/: SpectraLearnPredict.py
SpectraKeras/: SpectraKeras_CNN.py  SpectraKeras_CNN_test.py  SpectraKeras_CNN_visual.py  SpectraKeras_MLP.py  libSpectraKeras.py  pyproject.toml  setup-gpu.py  setup-tflite.py  setup.py
SpectraKeras-web/: SpectraKeras_CNN.py  index.html  index.php  libSpectraKeras.py
SpectraLearnPredict/: SpectraLearnPredict.ini  SpectraLearnPredict2.ini  setup-gpu.py  setup.py
SpectraLearnPredict2/: SpectraLearnPredict2.ini  setup-gpu.py  setup.py
Training data/: Training_kerogen_HC.txt  Training_kerogen_HC_20170210a.txt  Training_kerogen_HC_20170210a_README.txt  Training_kerogen_HC_README.txt  svm_PPRG-AIDP-coal.txt  svm_PPRG-AIDP.txt  svm_PPRG.txt
Utilities/: AddHorizontalOffset.py  AddLinearBackground.py  AddMixHighFreqMaker.py  AddNoisyData.py  AddRelativeHorNoisyData.py  AddRelativeNoisyData.py  AddSpectraToLearnFile.py  AddVerticalOffset.py  CSVtoTxt.py  (+60 more)
(+191 files in other folders)
