[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "*.py"
]

[project]
name = "SpectraKeras"
version = "v2024.10.10.1"
dependencies = ["numpy", "h5py", "tensorflow", "pydot", "graphviz","scipy","tf-keras"]
authors = [{ name="Nicola Ferralis", email="ferralis@mit.edu" },]
description = "Machine learning for scientific spectra"
readme = "../README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.scripts]
SpectraKeras_CNN = "SpectraKeras_CNN:SpectraKeras_CNN"
SpectraKeras_MLP = "SpectraKeras_MLP:SpectraKeras_MLP"
        
[project.urls]
Homepage = "https://github.com/feranick/SpectralMachine"
Issues = "https://github.com/feranick/SpectralMachine/issues"
